moved to sqlite as a backend
Note: this makes it slightly incompatible with the blog-post but more beginner
friendly as setting up postgres is not necessary

--- a/snap-api-tutorial.cabal
+++ b/snap-api-tutorial.cabal
@@ -33,8 +33,8 @@ Executable snap-api-tutorial
     heist                     >= 0.14    && < 0.15,
     MonadCatchIO-transformers >= 0.2.1   && < 0.4,
     mtl                       >= 2       && < 3,
-    postgresql-simple         >= 0.4.9.0,
-    snaplet-postgresql-simple >= 0.6,
+    sqlite-simple,
+    snaplet-sqlite-simple,
     snap                      >= 0.13    && < 0.14.1,
     snap-core                 >= 0.9     && < 0.10,
     snap-server               >= 0.9     && < 0.10,
