--- a/stack.yaml
+++ b/stack.yaml
@@ -7,8 +7,7 @@ packages:
 # Packages to be pulled from upstream that are not in the resolver (e.g., acme-missiles-0.3)
 extra-deps: [ snap-loader-dynamic-0.10.0.3
             , snap-loader-static-0.9.0.2
-            , snaplet-postgresql-simple-0.6.0.4
-            , resource-pool-catchio-0.2.1.0
+            , snaplet-sqlite-simple-0.4.8.3
             ]
 
 # Override default flag values for local packages and extra-deps
