create tables automatically

--- a/snap-api-tutorial.cabal
+++ b/snap-api-tutorial.cabal
@@ -39,6 +39,7 @@ Executable snap-api-tutorial
     snap-core                 >= 0.9     && < 0.10,
     snap-server               >= 0.9     && < 0.10,
     snap-loader-static        >= 0.9     && < 0.10,
+    transformers,
     text                      >= 0.11    && < 1.3,
     time                      >= 1.1     && < 1.5.1,
     xmlhtml                   >= 0.1     && < 0.3
